developed access page

--- a/access.html
+++ b/access.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link href="objects/styles.css" rel="stylesheet">
+    <link href="objects/styles2.css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Храм SCP Foundation</title>
     <script type="text/javascript" src="//cdn.qform24.com/forms.js"  charset="utf-8"></script>
@@ -32,8 +32,59 @@
                   </div>
                           <div class="content">
                                 <div class="main-header">
-                                  В разработке
+                                  Уровни допуска
                                 </div>
+                                <div class="main-header-under" style="padding-bottom:5px">
+                                  Первый уровень
+                                </div>
+                                <div class="table">
+                                  <div class="mainDescr">
+                                    Первый уровень допуска предполагает допуск всех лиц, кроме объектов D-класса. 80% информации реестра Фонда обладают первым уровнем допуска.
+
+                                  </div>
+                                </div>
+                                <div class="main-header-under" style="padding-bottom:5px; padding-top:40px" >
+                                  Второй уровень
+                                </div>
+                                <div class="table">
+                                  <div class="mainDescr">
+                                    Второй уровень допуска предполагает доступ к данным реестра всех сотрудников Фонда, а так же специализированных учереждений по запросу и одобрению тремя из пяти членов совета О5.</br></br>
+                                    Запрещён доступ гражданских и объектов D-класса.
+                                  </div>
+                                </div>
+
+                                <div class="main-header-under" style="padding-bottom:5px; padding-top:40px" >
+                                  Третий уровень
+                                </div>
+                                <div class="table">
+                                  <div class="mainDescr">
+                                    Разрешён доступ сотрудников 3-го уровня допуска и выше (военные отряды, доктора и профессора, совет О5). </br></br>Запрещён доступ низшего состава (уборщики, подсобные рабочие, абитуриенты, магистранты и интерны Фонда). Равно как и гражданских лиц и объектов D-класса.
+
+                                  </div>
+                                </div>
+
+                                <div class="main-header-under" style="padding-bottom:5px; padding-top:40px" >
+                                  Четвёртый уровень
+                                </div>
+
+                                <div class="table">
+                                  <div class="mainDescr">
+                                    Разрешён допуск сотрудников 4-го уровня допуска и выше (доктора и профессора, совет О5). </br></br> Запрещён доступ лицам ниже 4-го уровня допуска.
+                                  </div>
+                                </div>
+
+                                <div class="main-header-under" style="padding-bottom:5px; padding-top:40px" >
+                                  пятый уровень
+                                </div>
+
+                                <div class="table">
+                                  <div class="mainDescr">
+                                    Разрешён допуск только лицам 5-го уровня допуска. Так же по решению совета О5 может быть выдан временный доступ к реестру. (по решнию 3-х из 5-ти членов совета)
+                                  </div>
+                                </div>
+
+
+
 
                                 <div class="compData">
                                   SECURE.CONTAIN.PROTECT XPAM CEO INC.
