developed info page

--- a/info.html
+++ b/info.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link href="objects/styles.css" rel="stylesheet">
+    <link href="objects/styles2.css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Храм SCP Foundation</title>
     <script type="text/javascript" src="//cdn.qform24.com/forms.js"  charset="utf-8"></script>
@@ -32,9 +32,15 @@
                   </div>
                           <div class="content">
                                 <div class="main-header">
-                                  В разработке
+                                  Информация
                                 </div>
 
+                                <div class="table">
+                                  <div class="mainDescr">
+Фонд был создан в 20-м веке для содержания особых аномальных объектов. На данный момент Фонд успешно содержит более 5000 SCP объектов. </br></br>
+Если вы имеете желание поддержать Фонд и вступить в его ряды бесчисленного количества сотрудников, то просто оставьте своё резюме по этому электронному адресу - ██████████@scpxpam.com - или же позвоните по номеру горячей линии - +7 ███ ███ ██ !
+                                                                      </div>
+                                </div>
                                 <div class="compData">
                                   SECURE.CONTAIN.PROTECT XPAM CEO INC.
                                 </div>
