developed classes page

--- a/classes.html
+++ b/classes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link href="objects/styles.css" rel="stylesheet">
+    <link href="objects/styles2.css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Храм SCP Foundation</title>
     <script type="text/javascript" src="//cdn.qform24.com/forms.js"  charset="utf-8"></script>
@@ -32,8 +32,82 @@
                   </div>
                           <div class="content">
                                 <div class="main-header">
-                                  В разработке
+                                  Классы объектов
                                 </div>
+                                  <div class="main-header-under" style="padding-bottom:10px; padding-top:20px;">
+                                    D-класс
+                                  </div>
+                                  <div class="table">
+                                  <div class="mainDescr" >
+                                    D-классом названы заключенные, которых фонд выкупил у правительств разных стран под предлогом более дешёвого содержания. </br></br>
+                                    Фонд использует объекты D-класса для [ДАННЫЕ УДАЛЕНЫ].
+                                  </div>
+                                </div>
+
+                                <div class="main-header-under" style="padding-bottom:0px; padding-top:30px;">
+                                  Безопасный
+                                </div>
+                                <div class="table">
+                                <div class="mainDescr" >
+                                  Объекты класса "Безопасный" - это аномалии, которые либо достаточно хорошо изучены для полноценного и надёжного долговременного содержания, либо не проявляют аномального воздействия без определённого внешнего стимула.
+</BR></BR>
+Назначение аномалии класса "Безопасный" не значит, что активация или работа с ней не несёт угрозы; всем сотрудникам следует помнить, что все особые условия содержания и протоколы безопасности следует соблюдать неукоснительно.
+                                </div>
+                              </div>
+
+                              <div class="main-header-under" style="padding-bottom:0px; padding-top:30px;">
+                                Евклид
+                              </div>
+                              <div class="table">
+                              <div class="mainDescr" >
+                                К объектам класса "Евклид" относятся недостаточно изученные или изначально непредсказуемые аномалии, надёжное содержание которых не всегда возможно, но уровень угрозы недостаточен для присвоения им класса "Кетер". Подавляющему большинству аномалий, содержащихся Фондом, изначально присваивается класс "Евклид", который затем может быть изменён, если объект достаточно хорошо изучен или уровень представляемой им опасности слишком велик.
+</BR></BR>
+В частности, всем аномалиям, которые можно назвать автономными и/или разумными, чаще всего присваивается класс не ниже "Евклида", поскольку объект, наделённый собственной волей или мышлением, по сути непредсказуем.
+                              </div>
+                            </div>
+
+                            <div class="main-header-under" style="padding-bottom:0px; padding-top:30px;">
+кетер
+                            </div>
+                            <div class="table">
+                            <div class="mainDescr" >
+                              Объекты класса "Кетер" - аномалии, которые настроены враждебно, представляют опасность для сотрудников Фонда и всего остального человечества, а их содержание сопряжено с большими затратами и сложными процедурами сдерживания, либо такие, полноценное содержание которых с помощью имеющихся у Фонда знаний и средств невозможно.
+</BR></BR>
+Как правило, такие аномалии считаются самыми опасными из всех, находящихся на содержании, а научная деятельность по таким объектам направлена исключительно на разработку более надёжных средств сдерживания, либо, в качестве крайней меры, на своевременную нейтрализацию или уничтожение их аномального эффекта.
+                            </div>
+                          </div>
+
+                          <div class="main-header-under" style="padding-bottom:0px; padding-top:40px;">
+                            Таумиель
+                          </div>
+                          <div class="table">
+                          <div class="mainDescr" >
+                            Объекты класса "Таумиэль" имеют высокую степень секретности, встречаются крайне редко и применяются Фондом для содержания или противодействия другим аномалиям, представляющим большую опасность, в особенности - объектам класса "Кетер". Сама информация о существовании объектов класса "Таумиэль" является секретной и доступна только высокопоставленным сотрудникам Фонда, а информация о местонахождении, функциях и актуальном состоянии таких объектов не известна практически никому, кроме Совета О5.
+                          </div>
+                        </div>
+
+                        <div class="main-header" style="padding-top:90px;">
+                          Вторичные классы
+                        </div>
+                          <div class="main-header-under" style="padding-bottom:10px; padding-top:20px;">
+                            Нейтрализованный
+                          </div>
+                          <div class="table">
+                          <div class="mainDescr" >
+                            Нейтрализованные аномалии утратили свою аномальность из-за намеренного или случайного разрушения, отключения либо по какой-то иной причине.
+</BR></BR>
+Документация по нейтрализованным аномалиям сдаётся в архив на случай, если аномальные свойства проявятся вновь, либо будет обнаружена подобная аномалия.
+                          </div>
+                        </div>
+                        <div class="main-header-under" style="padding-bottom:10px; padding-top:20px;">
+                          Обоснованный
+                        </div>
+                        <div class="table">
+                        <div class="mainDescr" >
+Обоснованные объекты - это объекты, природа которых целиком и полностью установлена, объяснима с помощью классической науки, а также фальсифицированные объекты, обычные объекты, которым по ошибке были приписаны аномальные свойства, либо такие, которые распространились настолько широко, что сдерживание не представляется возможным.
+                            </div>
+                      </div>
+
 
                                 <div class="compData">
                                   SECURE.CONTAIN.PROTECT XPAM CEO INC.
