--- a/enter.html
+++ b/enter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link href="styles.css" rel="stylesheet">
+    <link href="styles2.css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Храм SCP Foundation</title>
     <script type="text/javascript" src="//cdn.qform24.com/forms.js"  charset="utf-8"></script>
