fixed enter page

--- a/enter.html
+++ b/enter.html
@@ -10,21 +10,63 @@
 <div class="flex-c">
       <div class="bg-top-header">
       <div class="top-header">
-       Secure. Contain. Protect.
+
       </div>
       <div class="top-header-under">
-       Храм Edition
+
+      </div>
+      </div>
+      <div class="bg-top-header">
+      <div class="top-header">
+
+      </div>
+      <div class="top-header-under">
+
+      </div>
+      </div>
+      <div class="bg-top-header">
+      <div class="top-header">
+     Войти
+      </div>
+      <div class="top-header-under">
+      В реестр
+      </div>
+      </div>
+      <div class="bg-top-header">
+      <div class="top-header">
+
+      </div>
+      <div class="top-header-under">
+
+      </div>
+      </div>
+      <div class="bg-top-header">
+      <div class="top-header">
+
+      </div>
+      <div class="top-header-under">
+
+      </div>
+      </div>
+      <div class="bg-top-header">
+      <div class="top-header">
+
+      </div>
+      <div class="top-header-under">
+
+      </div>
+      </div>
+      <div class="bg-top-header">
+      <div class="top-header">
+
+      </div>
+      <div class="top-header-under">
+
       </div>
       </div>
 
 
-  <div class="logBttn">
-    <a href="index.html">
-       <div class="logBttnTxt">
-          Войти
-       </div>
-       </a>
-    </div>
+
 
 
                  <div class="compDataEnter">
