--- a/index.html
+++ b/index.html
@@ -35,20 +35,23 @@
                                   Объекты
                                 </div>
                                 <div class="objects">
-                                  <div class="objects-list">
+                                  <!-- <div class="objects-list">
                                      <a href="objects/1.html">SCP 1 - Скверная Артёмия</a>
-                                  </div>
+                                  </div> -->
                                   <div class="objects-list">
                                      <a href="objects/2.html">SCP 2 - Ортём</a>
                                   </div>
-                                  <div class="objects-list">
+                                 <!-- <div class="objects-list">
                                      <a href="objects/3.html">SCP 3 - Дементий</a>
                                   </div>
                                   <div class="objects-list">
                                      <a href="objects/4.html">SCP 4 - Cкверная мелодия</a>
-                                  </div>
+                                  </div> -->
                                   <div class="objects-list">
                                      <a href="objects/5.html">SCP 5 -  Раздор</a>
+                                  </div>
+                                  <div class="objects-list">
+                                     <a href="objects/913.html">SCP 913 -  Преследующее владельца кровавое пятно</a>
                                   </div>
                                 </div>
 
