fixed difference between menus

--- a/staff.html
+++ b/staff.html
@@ -32,7 +32,28 @@
                   </div>
                           <div class="content">
                                 <div class="main-header">
-                                  В разработке
+                                  Список сотрудников
+                                </div>
+                                <div class="main-header-under" style="padding-bottom:10px;padding-top:10px;">
+                                  Совет O5
+                                </div>
+
+                                <div class="table">
+                                  <div class="mainDescr" style="text-align:center" >
+                                    <b style="color:#29A487"> SCP - 2 - Ортём </b> - является основателем Фонда SCP Храм и членом совета 05.
+                                  </div>
+                                  <div class="mainDescr" style="text-align:center" >
+                                    <b style="color:#29A487"> [ДАННЫЕ УДАЛЕНЫ] </b>
+                                  </div>
+                                  <div class="mainDescr" style="text-align:center" >
+                                    <b style="color:#29A487"> [ДАННЫЕ УДАЛЕНЫ] </b>
+                                  </div>
+                                  <div class="mainDescr" style="text-align:center" >
+                                    <b style="color:#29A487"> [ДАННЫЕ УДАЛЕНЫ] </b>
+                                  </div>
+                                  <div class="mainDescr" style="text-align:center" >
+                                    <b style="color:#29A487"> [ДАННЫЕ УДАЛЕНЫ] </b>
+                                  </div>
                                 </div>
 
                                 <div class="compData">
