--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                                      <a href="objects/5.html">SCP 5 -  Раздор</a>
                                   </div>
                                   <div class="objects-list">
+                                     <a href="objects/403.html">SCP 403 -  Дрожащий постельный комплект</a>
+                                  </div>
+                                  <div class="objects-list">
                                      <a href="objects/913.html">SCP 913 -  Преследующее владельца кровавое пятно</a>
                                   </div>
                                 </div>
