added new staff

--- a/staff.html
+++ b/staff.html
@@ -40,10 +40,10 @@
 
                                 <div class="table">
                                   <div class="mainDescr" style="text-align:center" >
-                                    <b style="color:#29A487"> SCP - 2 - Ортём </b> - является основателем Фонда SCP Храм и членом совета 05.
+                                    <b style="color:#29A487"> SCP - 2 - Ортём </b> - является основателем Фонда SCP Храм и членом совета О5.
                                   </div>
                                   <div class="mainDescr" style="text-align:center" >
-                                    <b style="color:#29A487"> [ДАННЫЕ УДАЛЕНЫ] </b>
+                                    <b style="color:#29A487"> SCP - 0 - Дементий </b> - является участником Фонда SCP Храм и членом совета О5.
                                   </div>
                                   <div class="mainDescr" style="text-align:center" >
                                     <b style="color:#29A487"> [ДАННЫЕ УДАЛЕНЫ] </b>
