added scp 97. nophoto added

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                                      <a href="objects/5.html">SCP 5 -  Раздор</a>
                                   </div>
                                   <div class="objects-list">
+                                     <a href="objects/97.html">SCP 97 -  Костыль</a>
+                                  </div>
+                                  <div class="objects-list">
                                      <a href="objects/306.html">SCP 306 -  Дрожащий постельный комплект</a>
                                   </div>
                                   <div class="objects-list">
