--- a/objects/306.html
+++ b/objects/306.html
@@ -31,7 +31,7 @@
                     </div>
                   </div>
                           <div class="content">
-                                <div class="main-header">
+                                <div class="main-header" style="text-align:center">
                                   Дрожащий постельный комплект
                                 </div>
                                 <div class="main-header-under">
