--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                                   Объекты
                                 </div>
                                 <div class="objects">
-                                  <!-- <div class="objects-list">
+                                   <div class="objects-list">
                                      <a href="objects/1.html">SCP 1 - Скверная Артёмия</a>
-                                  </div> -->
+                                  </div> 
                                   <div class="objects-list">
                                      <a href="objects/2.html">SCP 2 - Ортём</a>
                                   </div>
