--- a/objects/1.html
+++ b/objects/1.html
@@ -31,9 +31,70 @@
                     </div>
                   </div>
                           <div class="content">
-                                <div class="main-header">
-                                  В разработке
+                                <div class="main-header" style="text-align:center">
+                                  Скверная Артёмия
                                 </div>
+                                <div class="main-header-under">
+                                  SCP -  1
+                                </div>
+                                <div class="table">
+                                  <div class="tableR">
+                                   <div class="imgMain">
+                                           <img src="img/nophoto.jpg" width="300px" height="300px" alt="O_o">
+                                   </div>
+                                   <div class="mainTxt">
+                                     <b>Уровень допуска:</b> <a href="../access.html" style="color:#c73636"> четвёртый.</a>
+                                 </br> </br> <b>Класс:</b> <a href="../classes.html" style="color:#c73636">кетер.</a>
+                               </br> </br> <b>Возраст:</b> [ДАННЫЕ УДАЛЕНЫ].
+                                   </div>
+                                  </div>
+                                </div>
+
+                                <div class="main-header-2">
+                                  условия содержания
+                                </div>
+
+                                <div class="table">
+                                  <div class="mainDescr">
+ Cодержать в комнате 3х3х3 метра, стены которой состоят из титанового сплава, совмещённого с армированными бетонными конструкциями. Дверь в комнату должна состоять из армированного титанового сплава.</br></br> На входе должны стоять 4 специально обученных охранника в обмундировании максимального класса. В камере запрещено устанавливать средства аудио- и видеосвязи.</br></br> Каждый день следует предоставлять объекту пищу дважды. В обед: две сосиски и хлеб. На ужин: вода, куриное яйцо, пачка закрытых чипсов. <b>КАТЕГОРИЧЕСКИ</b> запрещено проводить завтрак.
+                                                        </div>
+                                </div>
+
+                                <div class="main-header-2">
+                                  описание
+                                </div>
+
+                                <div class="table">
+                                  <div class="mainDescr">
+                                    Объект SCP-1 был найден в городе Минске, Беларусь. На данный момент известно, что объект родился в ████-м году, по его информации.</br></br> Объект общительный, сам предоставляет данные о себе. Выглядит как особь мужского пола 20-ти лет.
+Когда был найден, то назвался как "Скверная Артёмия". <b>КАТЕГОРИЧЕСКИ</b> не воспринимает, когда его называют "Скверная Арт<b style="color:#c73636">Е</b>мия". В таком случае применяет меметическое воздействие на всех лиц в радиусе 20-ти километров. Начинает выкрикивать различные фразы, такие как: "бл* у", ████, ████. Так же начинает активно дышать в микрофон и жевать зубочистки.</br></br> Меметическое воздействие проявляется таким образом, что лица рядом начинают производить аналогичные действия, со временем превращаясь в неконтролируемых животных, каким является SCP-1.
+                                  </div>
+                                </div>
+
+                                <div class="main-header-2">
+                                  приложение
+                                </div>
+                                <div class="main-header-under" style="margin-top:30px;">
+                                  Инцедент #1
+                                </div>
+
+                                <div class="table">
+                                  <div class="mainDescr">
+                                     SCP-1 встретил SCP-███ на Львовском сервере в игре ARMA 2. В скором времени SCP-1 начал оказывать меметическое воздействие в течение 6-ти лет. В последствии субъект SCP-███ стал слушать музыку исполнителя SCRALXD, которую женевская конвенция признала какофонией и психологическим оружием класса █. Так же субъект начал просматривать прямые трансляции на хостинге TWITCH, а так же пререкаться с родителями.
+                                  </div>
+                                </div>
+
+                                <div class="main-header-under" style="margin-top:30px;">
+                                  Инцедент #XXXX
+                                </div>
+
+                                <div class="table">
+                                  <div class="mainDescr">
+                                      SCP-1 вошёл в контак с субъектом ХХХХ. Субъект умер по причине "отвалилась ████".
+                                  </div>
+                                </div>
+
+
 
                                 <div class="compData">
                                   SECURE.CONTAIN.PROTECT XPAM CEO INC.
