--- a/objects/97.html
+++ b/objects/97.html
@@ -74,7 +74,7 @@
                                   приложение
                                 </div>
                                 <div class="main-header-under" style="margin-top:30px;">
-                                  Инцедент #5
+                                  инцидент #5
                                 </div>
 
                                 <div class="table">
@@ -84,7 +84,7 @@
                                 </div>
 
                                 <div class="main-header-under" style="margin-top:30px;">
-                                  Инцедент #8
+                                  инцидент #8
                                 </div>
 
                                 <div class="table">
