--- a/objects/0.html
+++ b/objects/0.html
@@ -99,7 +99,7 @@
                                   приложение
                                 </div>
                                 <div class="main-header-under" style="margin-top:30px;">
-                                  Инцедент <a class="secret">XXXX</a>
+                                  инцидент <a class="secret">XXXX</a>
                                 </div>
 
                                 <div class="table">
@@ -111,7 +111,7 @@
                                 </div>
 
                                 <div class="main-header-under" style="margin-top:30px;">
-                                  Инцедент #13
+                                  инцидент #13
                                 </div>
 
                                 <div class="table">
@@ -125,7 +125,7 @@
                                 </div>
 
                                 <div class="main-header-under" style="margin-top:30px;">
-                                  Инцедент <a class="secret">YYYY</a>
+                                  инцидент <a class="secret">YYYY</a>
                                 </div>
 
                                 <div class="table">
@@ -137,7 +137,7 @@
                                 </div>
 
                                 <div class="main-header-under" style="margin-top:30px;">
-                                  Инцедент <a class="secret">ZZZZ</a>
+                                  инцидент <a class="secret">ZZZZ</a>
                                 </div>
 
                                 <div class="table">
