--- a/objects/1.html
+++ b/objects/1.html
@@ -75,7 +75,7 @@
                                   приложение
                                 </div>
                                 <div class="main-header-under" style="margin-top:30px;">
-                                  Инцедент #1
+                                  инцидент #1
                                 </div>
 
                                 <div class="table">
@@ -85,7 +85,7 @@
                                 </div>
 
                                 <div class="main-header-under" style="margin-top:30px;">
-                                  Инцедент #XXXX
+                                  инцидент #XXXX
                                 </div>
 
                                 <div class="table">
