--- a/objects/306.html
+++ b/objects/306.html
@@ -75,7 +75,7 @@
                                   приложение
                                 </div>
                                 <div class="main-header-under" style="margin-top:30px;">
-                                  Инцедент #3
+                                  инцидент #3
                                 </div>
 
                                 <div class="table">
@@ -91,7 +91,7 @@
                                 </div>
 
                                 <div class="main-header-under" style="margin-top:30px;">
-                                  Инцедент #13
+                                  инцидент #13
                                 </div>
 
                                 <div class="table">
@@ -109,7 +109,7 @@
                                 </div>
 
                                 <div class="main-header-under" style="margin-top:30px;">
-                                  Инцедент #69
+                                  инцидент #69
                                 </div>
 
                                 <div class="table">
