--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div id="fullpage">
     <div class="section" id="section0">
       <div class="container-fluid bgIMG1">
-        <div class="container">
+        <div class="container ">
           <div class="row">
             <div class="col d-flex justify-content-center align-items-center logoContainer wow bounceInDown" data-wow-duration="1s">
               <img class="logoSCP" src="images/SCPlogo.png" alt="">
@@ -63,11 +63,19 @@
     </div>
 
     <div class="section" id="section1">
-      <div class="container-fluid bgIMG2">
-        <div class="container textColor">
-          <div class="row" style="margin-top:2vh;">
-            <div class="col-12 d-flex justify-content-center">
-              <p>Перейти в реестр фонда</p>
+      <div class="container-fluid bgIMG3">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 d-flex justify-content-center bgIMG5" style="color:#212121 ">
+              <p>РЕЕСТР ФОНДА</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 d-flex justify-content-center bgIMG4 textFontMiddle textColor">
+              <p>В данном разделе Вы можете перейти в реестр фонда и просмотреть всю интересующую Вас информацию об объектах и фонде.</p>
+            </div>
+            <div class="col-12 d-flex justify-content-center align-items-center textColor">
+            dsadasd
             </div>
           </div>
         </div>
@@ -75,7 +83,7 @@
     </div>
 
     <div class="section" id="section2">
-      <div class="container-fluid bgIMG3"></div>
+      <div class="container-fluid bgIMG1"></div>
     </div>
 
 
